fixes to user group buttons and input alignment

--- a/frontend/source/sass/admin/overrides.scss
+++ b/frontend/source/sass/admin/overrides.scss
@@ -135,10 +135,18 @@ select[multiple="multiple"] {
 
 .submit-row {
   text-align: left;
-}
-
-.submit-row input[type="submit"] {
-  display: inline;
+  a.deletelink {
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    color: #ba2121 !important;
+    background: none !important;
+  }
+  input[type="submit"] {
+    display: inline;
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+  }
 }
 
 /* Styling for ul/lis with action links */
@@ -292,6 +300,8 @@ thead a:focus {
   width: 100%;
   .selector .selector-available input {
     width: 100%;
+    margin-left: 0;
+    margin-bottom: 0.8rem;
   }
   .selector .selector-filter {
     padding: 0;
